# mecanum_bot

./: CMakeLists.txt  package.xml  setup.py
launch/: mecanum_bot_launch.py  view_bot_launch.py
mecanum_bot/: mecanum_controller.py
rviz/: mecanum_bot.rviz
urdf/: mecanum_bot.urdf
