<package format="3">
  <name>mecanum_bot</name>
  <version>0.0.0</version>
  <description>ROS2 package for Mecanum robot simulation</description>
  <maintainer email="tasnimjaved.niloy@gmail.com">soap</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>
